--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
-httpx==0.25.1
-websockets==12.0
-python-multipart==0.0.6
-sqlalchemy==2.0.23
-aiosqlite==0.19.0
+fastapi
+uvicorn[standard]
+pydantic
+httpx
+websockets
+python-multipart
+sqlalchemy
+aiosqlite
