--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -1,4 +1,4 @@
-# Render.com service manifest for Enterprise Automation Agent
+# Render.com service manifest for AutoOps-AI
 # See: https://render.com/docs/manifest
 
 services:
